--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
+    "react-floaterjs": "^1.0.6",
     "react-router": "^6.0.2",
     "react-router-dom": "^5.3.0",
     "react-router-hash-link": "^2.4.3",
